--- a/Pokedex/Views/Shared/_Layout.cshtml
+++ b/Pokedex/Views/Shared/_Layout.cshtml
@@ -6,13 +6,13 @@
         <title>Pokedex</title>
 
         <!-- Favicons -->
-        <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png" sizes="180x180">
-        <link rel="icon" href="img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-        <link rel="icon" href="img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-        <link rel="icon" href="img/favicons/favicon.ico">
+        <link rel="apple-touch-icon" href="~/img/favicons/apple-touch-icon.png" sizes="180x180">
+        <link rel="icon" href="~/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+        <link rel="icon" href="~/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+        <link rel="icon" href="~/img/favicons/favicon.ico">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/site.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
     </head>
     <body class="min-vh-100 d-flex flex-column justify-content-between bg-dark">
         <header>
@@ -41,7 +41,7 @@
             <div class="navbar navbar-dark bg-danger shadow-sm">
                 <div class="container">
                     <a href="#" class="navbar-brand d-flex align-items-center">
-                        <img src="img/favicons/favicon-32x32.png" alt="Pokeball" class="me-2" />
+                        <img src="~/img/favicons/favicon-32x32.png" alt="Pokeball" class="me-2" />
                         &nbsp;<strong>POKÉDEX</strong>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
