--- a/Pokedex/Views/Home/Details.cshtml
+++ b/Pokedex/Views/Home/Details.cshtml
@@ -1,5 +1,5 @@
 
-@model Pokedex.Models.Pokemon
+@model Pokedex.ViewModels.DetailVM
 @{
     ViewData["Title"] = "Pokemon";
 }
@@ -7,32 +7,36 @@
 <div class="container text-white">
 	<div class="row">
 		<div class="col text-center">
-			<a href="#" class="btn btn-lg btn-outline-danger text-white">001 - Bulbasaur</a>
+			@if(Model.Anterior != null)
+			{ <a asp-action="Details" asp-route-id="@Model.Anterior.Numero" class="btn btn-lg btn-outline-danger text-white">001 - Bulbasaur</a> }
 		</div>
+		
 		<div class="col text-center">
-			<h1 class="fs-1">Ivysaur <span class="fs-2 text-secondary">Nº 002</span></h1>
+			<h1 class="fs-1">@Model.Atual <span class="fs-2 text-secondary">Nº @Model.Numero.ToString("000")</span></h1>
 		</div>
+
 		<div class="col text-center">
-			<a href="#" class="btn btn-lg btn-outline-danger text-white">003 - Venusaur</a>
+			@if(Model.Proximo != null)
+			{ <a asp-action="Details" asp-route-id="@Model.Proximo.Numero class="btn btn-lg btn-outline-danger text-white">003 - Venusaur</a> }
 		</div>
 	</div>
 
 	<div class="row mt-5">
 		<div class="col-lg-5 p-0">
-			<img class="img-fluid cursor-pointer" src="~/img/pokemons/002.png" alt="Ivysaur">
+			<img class="img-fluid cursor-pointer" src="@Model.Imagem" alt="@Model.Nome">
 		</div>
 		<div class="col-lg-7 fs-5 mt-4">
-			<p class="mb-3"><strong>Descrição:</strong> Há um broto nas costas desse Pokémon. 
-				Para suportar seu peso, as pernas e o tronco de Ivysaur ficam grossos e fortes.
-				Se começar a passar mais tempo deitado sob a luz do sol,
-				é um sinal de que o broto florescerá em uma flor grande em breve.</p>
-			<p class="mb-3"><strong>Região:</strong> Kanto</p>
-			<p class="mb-3"><strong>Altura:</strong> 1 mts</p>
-			<p class="mb-3"><strong>Peso:</strong> 13 kgs</p>
+			<p class="mb-3"><strong>Descrição:</strong> @Model.Descricao</p>
+			<p class="mb-3"><strong>Região:</strong> @Model.Regiao.Nome</p>
+			<p class="mb-3"><strong>Gênero:</strong> @Model.Genero.Nome</p> 
+			<p class="mb-3"><strong>Altura:</strong> @Model.Altura mts</p> 
+			<p class="mb-3"><strong>Peso:</strong> @Model.Peso kgs</p>
 			<p class="fw-bold">Tipo</p>
 			<div class="d-flex gap-2 my-2">
-				<a href="#" class="btn btn-lg text-white" style="background-color:#7c5">Planta</a>
-                <a href="#" class="btn btn-lg text-white" style="background-color:#a59">Venenoso</a>
+				@foreach(var tipo in Model.Tipos)
+				{
+                	<a href="#" class="btn btn-lg text-white" style="background-color:@tipo.Tipo.Cor">@tipo.Tipo.Nome</a>
+				}
 			</div>
 		</div>
 	</div>
