Atualizar pacotes e criar crud de Tipo.

--- a/Pokedex/Views/Shared/_LayoutAdmin.cshtml
+++ b/Pokedex/Views/Shared/_LayoutAdmin.cshtml
@@ -59,7 +59,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link fs-6" href="#">
+                                <a class="nav-link fs-6" asp-action="Index" asp-controller="Tipos">
                                     <i class="bi bi-fire fs-5"></i>
                                     Tipos
                                 </a>
